# LestaAcademyTestTask

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  generate-coverage-info.sh  run-test.sh
LestaAcademyTestTask/: Arena.cpp  Arena.h  CMakeLists.txt  Character.cpp  Character.h  Controller.cpp  Controller.h  Monster.cpp  Monster.h  Player.cpp  Player.h  PlayerPromoter.cpp  PlayerPromoter.h  Printer.cpp  Printer.h  Spawner.cpp  Spawner.h  Weapon.cpp  Weapon.h  main.cpp  main.h  result.txt
tests/: CMakeLists.txt
tests/Controller/: CMakeLists.txt  controller_tests.cpp
tests/Player/: CMakeLists.txt  player_tests.cpp
